dev/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-qrcode
spec:
  parentRefs:
  - name: gateway-qrcode
    namespace: gateway-qrcode
  rules:
  - backendRefs:
    - name: fastapi
      port: 8000
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    matches:
    - path:
        type: PathPrefix
        value: /api
    name: rule-0
  - backendRefs:
    - name: frontend
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-1
